# corecvs

./: .gitignore  .gitmodules  BuildCoreCVS.bat  CMakeLists.txt  Doxyfile  GenerateCoreCVS.bat  README.md  arduinoscancontrol.ino  build_corecvs.sh  check  common.pri  config-cpu-features.pri  config.pri  cvs-config.pri  cvs-mainpage.h  cvs-open.pro  git-version.pri  out.json  readme.txt  rewrite_includes.sh  someInfo.md  someInfo.md.save  Документы - Ярлык.lnk
applications/: CMakeLists.txt
applications/apriltag_test/: CMakeLists.txt  apriltag_test.cpp  apriltag_test.h
applications/base/: CMakeLists.txt  abstractCalculationThread.cpp  abstractCalculationThread.h  baseApplication.pri  baseApplication.pro  baseApplicationExample.pro  baseCalculationThread.cpp  baseCalculationThread.h  baseHostDialog.cpp  baseHostDialog.h  baseOutputData.cpp  baseOutputData.h  baseParametersControlWidget.cpp  baseParametersControlWidget.h  camerasConfigParameters.cpp  camerasConfigParameters.h  convert.py  mainWindow.cpp  mainWindow.h  main_vibase.cpp  presentationParametersControlWidget.cpp  presentationParametersControlWidget.h  scene3DMouse.cpp  scene3DMouse.h
applications/cloudview/: CMakeLists.txt  cloudview.pro  main_cloudview.cpp
applications/coptercontrol/: CMakeLists.txt  copterControlWidget.cpp  copterDialog.cpp  copterDialog.h  copterThread.cpp  copterThread.h  coptercontrol.pro  main_copter.cpp
applications/distortionCorrector/: corrector.pro  correctorMainWindow.cpp  correctorMainWindow.h  main_corrector.cpp
applications/drone/: CMakeLists.txt  drone.pro
applications/egomotion/: CMakeLists.txt  Makefile.egomotion  egomotion.pro  egomotionDialog.cpp  egomotionDialog.h  egomotionThread.cpp  egomotionThread.h  main_egomotion.cpp
applications/imageview/: CMakeLists.txt  imageViewMainWindow.cpp  imageViewMainWindow.h  imageViewMainWindow.ui  imageview.pro  main_imageview.cpp
applications/laserscan/: CMakeLists.txt  laserscan.pro  main.cpp
applications/nester/: CMakeLists.txt  foo.dxf  main_nester.cpp  main_nester_копия.cpp  nester.cpp  nester.h  nester.pro  nester_копия.cpp
applications/nester-test/: main_nester_test.cpp  nester-test.pro
applications/physics/: CMakeLists.txt  Makefile  clientSender.cpp  clientSender.h  clientsender.cpp  clientsender.h  comcontroller.cpp  comcontroller.h  controlRecord.cpp  controllRecord.cpp  controllRecord.h  controllrecord.cpp  copterInputs.cpp  copterInputs.h  copterInputsWidget.cpp  copterInputsWidget.h  copterInputsWidget.ui  frameProcessor.cpp  frameProcessor.h  joystickInput.cpp  joystickInput.h  joystickinput.cpp  joystickinput.h  mainObject.cpp  mainObject.h  mainPhysics.cpp  main_physics.cpp  physMainObject.cpp  physMainObject.h  physObject.cpp  physObject.h  physSphere.cpp  physSphere.h  physics.pro  physicsMainWidget.cpp  physicsMainWidget.h  physicsMainWidget.ui  physicsMainWindow.cpp  physicsMainWindow.h  physicsMainWindow.ui  (+14 more)
applications/physics-test/: main_physics_test.cpp  physics-test.pro
applications/qtnester/: CMakeLists.txt  gui_nester.cpp  gui_nester.h  gui_nester.ui  imageViewMainWindow.cpp  imageViewMainWindow.h  imageViewMainWindow.ui  main_qtnester.cpp  nester.cpp  nester.h
applications/recorder/: CMakeLists.txt  main_recorder.cpp  main_virecorder.cpp  recorder.pro  recorderControlWidget.cpp  recorderControlWidget.h  recorderDialog.cpp  recorderDialog.h  recorderThread.cpp  recorderThread.h  recorderWidget.cpp
applications/robodetect/: CMakeLists.txt  localHistogram.h  main_robodetect.cpp  pointScene.h  robodetect.pro  robodetectMainWindow.cpp  robodetectMainWindow.h
applications/scanner/: CMakeLists.txt  laserlinedetection.cpp  laserlinedetection.h  main_scanner.cpp  scanner.pro  scannerControlWidget.cpp  scannerControlWidget.h  scannerDialog.cpp  scannerDialog.h  scannerParametersControlWidget.cpp  scannerParametersControlWidget.h  scannerThread.cpp  scannerThread.h  scannerWidget.cpp
applications/stereo/: main.cpp  sphereReconstructed.cpp  sphereReconstructed.h  stereo.pro  stereoReconstructedScene.cpp  stereoReconstructedScene.h  widget.cpp  widget.h
applications/testSuperResolution/: commonStructures.cpp  commonStructures.h  convolution.cpp  convolution.h  gradientDescent.cpp  gradientDescent.h  listsOfLRImages.cpp  listsOfLRImages.h  main_testSuperResolution.cpp  modelingProcess.cpp  modelingProcess.h  polygons.cpp  polygons.h  resamples.cpp  resamples.h  testSuperResolution.pro  testSuperResolutionMainWindow.cpp  testSuperResolutionMainWindow.h  transformations.cpp  transformations.h
applications/testbed/: CMakeLists.txt  gapFiller.h  localHistogram.cpp  localHistogram.h  main_testbed.cpp  pointScene.cpp  testbed.pro  testbedMainWindow.cpp  testbedMainWindow.h
applications/testdistortion/: Makefile  Makefile.testdistortion  houghSpace.cpp  houghSpace.h  houghTransformViewer.cpp  houghTransformViewer.h  main_testDistortion.cpp  testDistortionMainWindow.cpp  testDistortionMainWindow.h  testbedMainWindow.cpp  testbedMainWindow.h  testdistortion.pro  tmp.cpp
applications/vinylCutter/: CMakeLists.txt  gcodeHandler.cpp  gcodeHandler.h  gcodeToSceneInterpreter.cpp  gcodeToSceneInterpreter.h  mainWindow.cpp  mainWindow.h  mainWindow.ui  main_vinylCutter.cpp  myGraphicsView.cpp  myGraphicsView.h
applications/vkwidgettest/: CMakeLists.txt  vkwidgettest.cpp
core/: CMakeLists.txt  Makefile  core.pri  core.pro
core/alignment/: CMakeLists.txt  (+24 more)
test/: CMakeLists.txt  tests.pro
test-core/: CMakeLists.txt  Makefile  gentest.sh  main.cpp  test-core.pro  test.pri  testsCommon.pri  unitTests.pro  valgrind.sh
utils/: CMakeLists.txt  CMakeListsOLD.txt  configManager.cpp  configManager.h  flowDrawer.cpp  flowDrawer.h  frames.cpp  frames.h  matrixwidget.cpp  matrixwidget.h  matrixwidget.ui  qtHelper.cpp  qtHelper.h  scannercontrol.cpp  scannercontrol.h  timeliner.cpp  timeliner.h  trackPainter.cpp  trackPainter.h  utils.pri  utils.pro  viAreaWidget.cpp  viAreaWidget.h  viAreaWidget.ui  viGLAreaWidget.cpp  viGLAreaWidget.h  viGLAreaWidget.ui
wrappers/: CMakeLists.txt  httpUtils.cpp  httpUtils.h
(+2642 files in other folders)
